--- a/ActionsContentViewExample/res/layout/effect_bounce.xml
+++ b/ActionsContentViewExample/res/layout/effect_bounce.xml
@@ -23,12 +23,12 @@
     app:actions_layout="@layout/effect_actions"
     app:actions_spacing="0dp"
     app:content_layout="@layout/effect_content"
-    app:effect_content="@anim/effect_bounce_content"
-    app:effect_on_fling_only="true"
+    app:effect_content="@array/bounce_effect"
+    app:effects="fling_opening"
+    app:effects_interpolator="@android:anim/linear_interpolator"
     app:fade_max_value="@integer/default_pref_fade_max_value"
     app:fade_type="actions"
-    app:fling_duration="@integer/default_pref_fling_delay"
+    app:fling_duration="900"
     app:shadow_drawable="@drawable/shadow"
     app:shadow_width="@dimen/default_pref_shadow_width"
-    app:swiping_interpolator="@android:anim/linear_interpolator"
     app:swiping_type="full" />
