--- a/ActionsContentViewExample/res/values/arrays.xml
+++ b/ActionsContentViewExample/res/values/arrays.xml
@@ -23,6 +23,7 @@
         <item>@string/effect_alpha</item>
         <item>@string/effect_duration</item>
         <item>@string/effect_bounce</item>
+        <item>@string/effect_overshot</item>
     </string-array>
 
     <array name="effect_layouts">
@@ -31,6 +32,15 @@
         <item>@layout/effect_alpha</item>
         <item>@layout/effect_duration</item>
         <item>@layout/effect_bounce</item>
+        <item>@layout/effect_overshot</item>
+    </array>
+    <array name="bounce_effect">
+        <item>@anim/effect_bounce_content</item>
+        <item>@null</item>
+    </array>
+    <array name="overshot_effect">
+        <item>@anim/effect_overshot_content</item>
+        <item>@null</item>
     </array>
 
     <!-- Actions -->
