--- a/ActionsContentViewExample/res/layout/webview.xml
+++ b/ActionsContentViewExample/res/layout/webview.xml
@@ -21,7 +21,8 @@
     <WebView
         android:id="@+id/webview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="@android:color/white" />
 
     <ProgressBar
         android:id="@+id/progress"
