--- a/ActionsContentViewExample/res/values-v11/styles.xml
+++ b/ActionsContentViewExample/res/values-v11/styles.xml
@@ -15,6 +15,6 @@
 -->
 <resources>
 
-    <style name="AppTheme" parent="android:Theme.Holo.Light" />
+    <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar" />
 
 </resources>
